# structured-public-domains

./: .coderabbit.yaml  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cleanup-branches.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml  update-psl.yml
benches/: lookup.rs
examples/: parity.rs
npm/: .npmignore  browser.d.ts  browser.js  index.d.cts  index.d.ts  node.cjs  node.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
npm/scripts/: gen-data.mjs  parity.mjs
npm/src/: index.test.ts  index.ts  psl-data.d.cts  tiny.test.ts  tiny.ts  trie.ts
scripts/: build-psl.py  build-wasm.sh  parity-domains.py
src/: lib.rs  psl.bin.zst  psl.json.zst  trie.rs  wasm.rs
