[package]
name = "structured-public-domains"
version = "0.0.4"
edition = "2024"
rust-version = "1.92"
authors = ["Structured World Foundation <foundation@sw.foundation>"]
description = "Compact Public Suffix List (PSL) for Rust. Zero dependencies, ~108KB embedded binary trie, O(depth * log k) lookup. Checked daily against publicsuffix.org."
documentation = "https://docs.rs/structured-public-domains/"
repository = "https://github.com/structured-world/structured-public-domains"
license = "Apache-2.0"
readme = "README.md"
keywords = ["psl", "public-suffix", "domain", "tld", "validation"]
categories = ["web-programming", "parser-implementations"]

[features]
wasm = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "lookup"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
