[package]
name = "structured-public-domains"
version = "0.0.6"
edition = "2024"
rust-version = "1.92"
authors = ["Structured World Foundation <foundation@sw.foundation>"]
description = "Compact Public Suffix List (PSL) for Rust. Zero dependencies, ~108KB embedded binary trie, O(depth * log k) lookup. Checked daily against publicsuffix.org."
documentation = "https://docs.rs/structured-public-domains/"
repository = "https://github.com/structured-world/structured-public-domains"
license = "Apache-2.0"
readme = "README.md"
keywords = ["psl", "public-suffix", "domain", "tld", "validation"]
categories = ["web-programming", "parser-implementations"]

[features]
wasm = ["dep:wasm-bindgen"]

# `cdylib` is required for the wasm-bindgen build; `rlib` is what Rust
# consumers link against. Cargo has no per-target crate-type, so `cdylib` is
# also produced on native builds — that is a few seconds of extra link time
# for this tiny zero-dependency crate and links cleanly on every CI target
# (including i686), so the bindings stay here rather than in a companion crate.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "lookup"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
